--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Douglas Sousa</title>
     <link rel="icon" href="_images/logo.png">
     <!-- CSS -->
-	<link rel="stylesheet" type="text/css" href="_assets/bootstrap/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="_assets/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="_assets/style.css">
 </head>
 <body>
