--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="theme-color" content="#E6E6E6">
     <title>Douglas Sousa</title>
-    <link rel="icon" href="_images/logo.png">
+    <link rel="icon" href="images/logo.png">
     <!-- CSS -->
-	<link rel="stylesheet" type="text/css" href="_assets/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="_assets/style.css">
+	<link rel="stylesheet" type="text/css" href="assets/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
 <body>
 
@@ -37,8 +37,8 @@
     <section id="footer"></section>
 
     <!-- JS -->
-	<script type="text/javascript" src="_assets/jquery3.4.1.min.js"></script>
-	<script type="text/javascript" src="_assets/popper.min.js"></script>
-	<script type="text/javascript" src="_assets/bootstrap.min.js"></script>
+	<script type="text/javascript" src="assets/jquery3.4.1.min.js"></script>
+	<script type="text/javascript" src="assets/popper.min.js"></script>
+	<script type="text/javascript" src="assets/bootstrap.min.js"></script>
 </body>
 </html>
