--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="theme-color" content="#E6E6E6">
+    <meta name="theme-color" content="#0D76A0">
     <title>Douglas Sousa</title>
     <link rel="icon" href="images/logo.png">
     <!-- CSS -->
