--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
             <div id="navbar-links">
                 <a class="tonamove" href="#portfolio">Portfolio</a>
                 <a class="tonamove" href="#about">About</a>
-                <a class="tonamove" href="#contact">Contact</a>
             </div>
         </nav>
     </section>
@@ -28,9 +27,9 @@
     <section id="home" class="section-content d-flex flex-row justify-content-initial align-items-center py-5">
         <div id="home-into" class="container py-5">
             <div class="text-white">
-                <h1 class="section-title mt-2 mb-4">Douglas Sousa</h1>
+                <h1 class="section-title mt-2 mb-3">Douglas Sousa</h1>
                 <p class="section-subtitle m-0 p-0">Developer</p>
-                <div class="social-buttons mt-5">
+                <div id="social-buttons" class="mt-5">
                     <a href="https://github.com/dougsousa" target="_blank">
                         <svg viewBox="0 0 496 512">
                             <path fill="currentColor" d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"></path>
@@ -54,9 +53,17 @@
     <section id="portfolio" class="section-content bg-light">
         <div class="container py-5">
             <div class="row py-5">
-                <div class="col-12">
+                <div class="col-12 mb-3">
                     <h2 class="section-title">Portfolio</h2>
                     <p class="section-subtitle">O que eu faço</p>
+                </div>
+                <div class="col-12">
+                    <button type="button" class="btn btn-outline-dark mr-1 mt-1">Todos</button>
+                    <div class="btn-group mt-1" role="group" aria-label="Basic example">
+                        <button type="button" class="btn btn-outline-dark">Websites</button>
+                        <button type="button" class="btn btn-outline-dark">Sistemas</button>
+                        <button type="button" class="btn btn-outline-dark">Webdesign</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -65,23 +72,22 @@
     <section id="about" class="section-content">
         <div class="container py-5">
             <div class="row py-5">
-                <div class="col-12">
+                <div class="col-12 mb-5">
                     <h2 class="section-title">About</h2>
                     <p class="section-subtitle">Quem eu sou</p>
                 </div>
-                <div class="p-5">
-                    <div style="font-family: Maven Pro;font-size: 180px;font-weight: 700;background: rgb(17, 148, 200);color: #FFFFFF;height: 210px;width: 210px;" class="d-flex flex-row justify-content-center align-items-center">D.</div>
-                </div>
-            </div>
-        </div>
-    </section>
-    
-    <section id="contact" class="section-content bg-light">
-        <div class="container py-5">
-            <div class="row py-5">
-                <div class="col-12">
-                    <h2 class="section-title">Contact</h2>
-                    <p class="section-subtitle">Onde me encontrar</p>
+                <div class="col-12 text-justify">
+                    <p>Olá!</p>
+                    <p>Meu nome é Douglas. Sou desenvolvedor webmaster há 4 anos.</p>
+                    <p>Trabalho com desenvolvimento de aplicações online:</p>
+                    <ul class="ml-3">
+                        <li>websites estáticos</li>
+                        <li>websites dinâmicos</li>
+                        <li>sistemas de cadastro</li>
+                        <li>sistemas de controle</li>
+                        <li>sistemas de fluxo de caixa</li>
+                        <li>sistemas de gerenciamento</li>
+                    </ul>
                 </div>
             </div>
         </div>
