--- a/index.html
+++ b/index.html
@@ -35,11 +35,6 @@
                             <path fill="currentColor" d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"></path>
                         </svg>
                     </a>
-                    <a class="WhatsAppSender" href="" target="_blank">
-                        <svg viewBox="0 0 448 512">
-                            <path fill="currentColor" d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7.9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z"></path>
-                        </svg>
-                    </a>
                     <a href="mailto:douglasalexandresousa@gmail.com" target="_blank">
                         <svg viewBox="0 0 512 512">
                             <path fill="currentColor" d="M464 64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V112c0-26.51-21.49-48-48-48zm0 48v40.805c-22.422 18.259-58.168 46.651-134.587 106.49-16.841 13.247-50.201 45.072-73.413 44.701-23.208.375-56.579-31.459-73.413-44.701C106.18 199.465 70.425 171.067 48 152.805V112h416zM48 400V214.398c22.914 18.251 55.409 43.862 104.938 82.646 21.857 17.205 60.134 55.186 103.062 54.955 42.717.231 80.509-37.199 103.053-54.947 49.528-38.783 82.032-64.401 104.947-82.653V400H48z"></path>
@@ -53,16 +48,57 @@
     <section id="portfolio" class="section-content bg-light">
         <div class="container py-5">
             <div class="row py-5">
-                <div class="col-12 mb-3">
+                <div class="col-12 mb-5">
                     <h2 class="section-title">Portfolio</h2>
                     <p class="section-subtitle">O que eu faço</p>
                 </div>
                 <div class="col-12">
-                    <button type="button" class="btn btn-outline-dark mr-1 mt-1">Todos</button>
-                    <div class="btn-group mt-1" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-dark">Websites</button>
-                        <button type="button" class="btn btn-outline-dark">Sistemas</button>
-                        <button type="button" class="btn btn-outline-dark">Webdesign</button>
+                    <div class="bg-white shadow rounded p-4">
+                        <h3 class="mb-3">Capas Car Capas Automotivas</h3>
+                        <a class="btn btn-warning mb-4" href="http://capascar.com.br" target="_blank">Acessar</a>
+                        <p>Website dinâmico com sistema administrativo que permite modificação e inserção no cadastro de produtos, criação de loja virtual, páginas para orçamentos com envio de imagens, formulários para contato.</p>
+                        <p>Registro dos daods de visitantes no website para métricas de marketing.</p>
+                        <h5 class="mt-5">Website</h5>
+                        <img class="img-fluid rounded" src="portfolio/capascar.png">
+                        <h5 class="mt-4">Painel administrativo</h5>
+                        <img class="img-fluid rounded" src="portfolio/capascar-admin.png">
+                    </div>
+                </div>
+                <div class="col-12 mt-5">
+                    <div class="bg-white shadow rounded p-4">
+                        <h3 class="mb-3">Cris Bonatelli Costuras e Bordados</h3>
+                        <a class="btn btn-warning mb-4" href="http://crisbonatelli.com.br" target="_blank">Acessar</a>
+                        <p>Website dinâmico com sistema administrativo que permite modificação do conteúdo e imagens apresentados nas páginas.</p>
+                        <p>Formulário para contato, links para redes sociais e mensageiros.</p>
+                        <h5>Ferramentas administrativas</h5>
+                        <p>Sistema personalizado para controle de fluxo de caixa;<br>Sistema que controla tarefas e trabalhos pendentes, concluídos e finalizados;<br>Sistema que contempla o cadastro de clientes e seus dados para manter um banco de dados de clientes;</p>
+                        <h5 class="mt-5">Website</h5>
+                        <img class="img-fluid rounded" src="portfolio/crisbonatelli.png">
+                        <h5 class="mt-4">Ferramentas administrativas</h5>
+                        <img class="img-fluid rounded" src="portfolio/crisbonatelli-ferramentas.png">
+                        <h5 class="mt-4">Sistema para fluxo de caixa</h5>
+                        <img class="img-fluid rounded mb-2" src="portfolio/crisbonatelli-cashbook-1.png">
+                        <img class="img-fluid rounded mb-2" src="portfolio/crisbonatelli-cashbook-2.png">
+                        <img class="img-fluid rounded mb-2" src="portfolio/crisbonatelli-cashbook-3.png">
+                        <img class="img-fluid rounded" src="portfolio/crisbonatelli-cashbook-4.png">
+                        <h5 class="mt-4">Sistema para controle de tarefas e trabalhos</h5>
+                        <img class="img-fluid rounded" src="portfolio/crisbonatelli-tasks-1.png">
+                        <h5 class="mt-4">Sistema para cadastro de clientes</h5>
+                        <img class="img-fluid rounded mb-2" src="portfolio/crisbonatelli-portfolio-1.png">
+                        <img class="img-fluid rounded" src="portfolio/crisbonatelli-portfolio-2.png">
+                    </div>
+                </div>
+                <div class="col-12 mt-5">
+                    <div class="bg-white shadow rounded p-4">
+                        <h3 class="mb-3">Artibus Tecnologia</h3>
+                        <a class="btn btn-warning mb-4" href="http://artibus.com.br" target="_blank">Acessar</a>
+                        <p>Sou fundador da Artibus Tecnologia, prestando serviços e desenvolvendo sites e serviços online.</p>
+                        <p>Criação de aplicações online disponibilizadas comercialmente no modelo SaaS.</p>
+                        <p>Criação do programa comercial online Embeasy. Software para precificação de bordados computadorizados.</p>
+                        <h5 class="mt-5">Website</h5>
+                        <img class="img-fluid rounded" src="portfolio/artibus.png">
+                        <h5 class="mt-4">Software Embeasy</h5>
+                        <img class="img-fluid rounded" src="portfolio/artibus-embeasy.png">
                     </div>
                 </div>
             </div>
