--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
                     <p class="section-subtitle">Quem eu sou</p>
                 </div>
                 <div class="col-12 text-justify">
-                    <p>Olá!</p>
-                    <p>Meu nome é Douglas. Sou desenvolvedor webmaster há 4 anos.</p>
+                    <p>Olá,</p>
+                    <p class="mb-5">Meu nome é Douglas!</p>
                     <p>Trabalho com desenvolvimento de aplicações online:</p>
                     <ul class="ml-3">
                         <li>websites estáticos</li>
