--- a/index.html
+++ b/index.html
@@ -57,78 +57,33 @@
                     <h2 class="section-title">Portfolio</h2>
                     <p class="section-subtitle">O que eu faço</p>
                 </div>
-                <div class="col-12">
+                <div class="col-12 col-lg-6">
                     <div class="bg-white shadow rounded p-4">
                         <h3 class="mb-3">Capas Car Capas Automotivas</h3>
-                        <a class="btn btn-warning mb-4" href="http://capascar.com.br" target="_blank">Acessar</a>
-                        <p>Website dinâmico com sistema administrativo que permite modificação e inserção no cadastro de produtos, criação de loja virtual, páginas para orçamentos com envio de imagens, formulários para contato.</p>
-                        <p>Registro dos daods de visitantes no website para métricas de marketing.</p>
-                        <h5 class="mt-5">Website</h5>
                         <img class="img-fluid rounded" src="portfolio/capascar.png">
-                        <h5 class="mt-4">Painel administrativo</h5>
-                        <img class="img-fluid rounded" src="portfolio/capascar-admin.png">
+                        <a class="btn btn-info w-100 mt-4" href="http://capascar.com.br" target="_blank">Acessar</a>
                     </div>
                 </div>
-                <div class="col-12 mt-5">
+                <div class="col-12 col-lg-6 mt-5 mt-lg-0">
                     <div class="bg-white shadow rounded p-4">
                         <h3 class="mb-3">Cris Bonatelli Costuras e Bordados</h3>
-                        <a class="btn btn-warning mb-4" href="http://crisbonatelli.com.br" target="_blank">Acessar</a>
-                        <p>Website dinâmico com sistema administrativo que permite modificação do conteúdo e imagens apresentados nas páginas.</p>
-                        <p>Formulário para contato, links para redes sociais e mensageiros.</p>
-                        <h5>Ferramentas administrativas</h5>
-                        <p>Sistema personalizado para controle de fluxo de caixa;<br>Sistema que controla tarefas e trabalhos pendentes, concluídos e finalizados;<br>Sistema que contempla o cadastro de clientes e seus dados para manter um banco de dados de clientes;</p>
-                        <h5 class="mt-5">Website</h5>
                         <img class="img-fluid rounded" src="portfolio/crisbonatelli.png">
-                        <h5 class="mt-4">Ferramentas administrativas</h5>
-                        <img class="img-fluid rounded" src="portfolio/crisbonatelli-ferramentas.png">
-                        <h5 class="mt-4">Sistema para fluxo de caixa</h5>
-                        <img class="img-fluid rounded mb-2" src="portfolio/crisbonatelli-cashbook-1.png">
-                        <img class="img-fluid rounded mb-2" src="portfolio/crisbonatelli-cashbook-2.png">
-                        <img class="img-fluid rounded mb-2" src="portfolio/crisbonatelli-cashbook-3.png">
-                        <img class="img-fluid rounded" src="portfolio/crisbonatelli-cashbook-4.png">
-                        <h5 class="mt-4">Sistema para controle de tarefas e trabalhos</h5>
-                        <img class="img-fluid rounded" src="portfolio/crisbonatelli-tasks-1.png">
-                        <h5 class="mt-4">Sistema para cadastro de clientes</h5>
-                        <img class="img-fluid rounded mb-2" src="portfolio/crisbonatelli-portfolio-1.png">
-                        <img class="img-fluid rounded" src="portfolio/crisbonatelli-portfolio-2.png">
+                        <a class="btn btn-info w-100 mt-4" href="http://crisbonatelli.com.br" target="_blank">Acessar</a>
                     </div>
                 </div>
-                <div class="col-12 mt-5">
+                <div class="col-12 col-lg-6 mt-5">
                     <div class="bg-white shadow rounded p-4">
                         <h3 class="mb-3">Artibus Tecnologia</h3>
-                        <a class="btn btn-warning mb-4" href="http://artibus.com.br" target="_blank">Acessar</a>
-                        <p>Sou fundador da Artibus Tecnologia, prestando serviços e desenvolvendo sites e serviços online.</p>
-                        <p>Criação de aplicações online disponibilizadas comercialmente no modelo SaaS.</p>
-                        <p>Criação do programa comercial online Embeasy. Software para precificação de bordados computadorizados.</p>
-                        <h5 class="mt-5">Website</h5>
                         <img class="img-fluid rounded" src="portfolio/artibus.png">
-                        <h5 class="mt-4">Software Embeasy</h5>
-                        <img class="img-fluid rounded" src="portfolio/artibus-embeasy.png">
+                        <a class="btn btn-info w-100 mt-4" href="http://artibus.com.br" target="_blank">Acessar</a>
                     </div>
                 </div>
-            </div>
-        </div>
-    </section>
-    
-    <section id="about" class="section-content">
-        <div class="container py-5">
-            <div class="row py-5">
-                <div class="col-12 mb-5">
-                    <h2 class="section-title">About</h2>
-                    <p class="section-subtitle">Quem eu sou</p>
-                </div>
-                <div class="col-12 text-justify">
-                    <p>Olá,</p>
-                    <p class="mb-5">Meu nome é Douglas!</p>
-                    <p>Trabalho com desenvolvimento de aplicações online:</p>
-                    <ul class="ml-3">
-                        <li>websites estáticos</li>
-                        <li>websites dinâmicos</li>
-                        <li>sistemas de cadastro</li>
-                        <li>sistemas de controle</li>
-                        <li>sistemas de fluxo de caixa</li>
-                        <li>sistemas de gerenciamento</li>
-                    </ul>
+                <div class="col-12 col-lg-6 mt-5">
+                    <div class="bg-white shadow rounded p-4">
+                        <h3 class="mb-3">Embeasy <small class="text-muted">SaaS</small></h3>
+                        <img class="img-fluid rounded" src="portfolio/artibus-embeasy.png">
+                        <a class="btn btn-info w-100 mt-4" href="http://artibus.com.br/sobre-o-embeasy" target="_blank">Acessar</a>
+                    </div>
                 </div>
             </div>
         </div>
