--- a/chave.html
+++ b/chave.html
@@ -1,1 +1,69 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
+	<title>Chave de Acesso</title>
+	<style type="text/css" media="screen">
 
+		body {
+			background-color: #f1f1f1;
+			margin: 0;
+			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+		}
+
+		.container { margin: 50px auto 40px auto; width: 600px; text-align: center; }
+
+		a { color: #4183c4; text-decoration: none; }
+		a:hover { text-decoration: underline; }
+
+		h1 { width: 800px; position:relative; left: -100px; letter-spacing: -1px; line-height: 60px; font-size: 60px; font-weight: 100; margin: 0px 0 50px 0; text-shadow: 0 1px 0 #fff; }
+		p { color: rgba(0, 0, 0, 0.5); margin: 20px 0; line-height: 1.6; }
+
+		ul { list-style: none; margin: 25px 0; padding: 0; }
+		li { display: table-cell; font-weight: bold; width: 1%; }
+
+		.logo { display: inline-block; margin-top: 35px; }
+		.logo-img-2x { display: none; }
+		@media
+		only screen and (-webkit-min-device-pixel-ratio: 2),
+		only screen and (   min--moz-device-pixel-ratio: 2),
+		only screen and (     -o-min-device-pixel-ratio: 2/1),
+		only screen and (        min-device-pixel-ratio: 2),
+		only screen and (                min-resolution: 192dpi),
+		only screen and (                min-resolution: 2dppx) {
+			.logo-img-1x { display: none; }
+			.logo-img-2x { display: inline-block; }
+		}
+
+		code { font-size: 16px; }
+
+</style>
+</head>
+<body>
+
+	<div class="container">
+
+		<p><strong>Uso do programa não autorizado!</strong></p>
+
+		<p>
+			Para utilização do programa, é preciso ter licença.
+		</p>
+
+		<p>
+			Caso não a tenha, entre em contato através do e-mail abaixo:
+		</p>
+
+		<p>
+			<strong><code>ecdubh@gmail.com</code></strong>
+		</p>
+
+		<p>
+			Clique <a href="mailto:ecdubh@gmail.com?subject=Chave de Acesso ao software">aqui</a> para enviar o e-mail solicitando <strong>autorização</strong>.
+		</p>
+
+	</div>
+</body>
+</html>
