--- a/chave.html
+++ b/chave.html
@@ -57,11 +57,11 @@
 		</p>
 
 		<p>
-			<strong><code>ecdubh@gmail.com</code></strong>
+			<strong><code>douglasuw@gmail.com</code></strong>
 		</p>
 
 		<p>
-			Clique <a href="mailto:ecdubh@gmail.com?subject=Chave de Acesso ao software">aqui</a> para enviar o e-mail solicitando <strong>autorização</strong>.
+			Clique <a href="mailto:douglasuw@gmail.com?subject=Chave de Acesso ao software">aqui</a> para enviar o e-mail solicitando <strong>autorização</strong>.
 		</p>
 
 	</div>
