--- a/thifany/index.html
+++ b/thifany/index.html
@@ -253,6 +253,9 @@
 		$(document).ready(function(){
 			$("#prev").hide();
 		});
+		// clear url
+		url = window.location.toString().split('?')[0];
+		window.history.replaceState({}, document.title, url);
 	</script>
 
 </body>
